modal overflow fixed

--- a/src/app/Components/specific/slider/slider.component.scss
+++ b/src/app/Components/specific/slider/slider.component.scss
@@ -29,11 +29,11 @@
     width: 100%;
     height: 100vh;
     box-sizing: content-box;
-    margin: -88px auto -66px;
+    margin: -90px auto -66px;
     z-index: 1;
     min-height: 900px;
+    overflow: hidden;
     overflow-y: auto;
-    overflow-x: hidden;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
